<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mangapdf.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.mangapdf.ui.detail.DetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="manga"
            app:argType="com.example.mangapdf.models.Manga" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.mangapdf.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.mangapdf.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/activity_register" />
</navigation>
